--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,91 +2,53 @@
 
 
 body {
-  background-image: url("../images/rock.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+      background-image: url("../images/rock.jpg");
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
 }
 
 .jumbotron {
-  color: orange;
+      color: orange;
 }
 
 
 .banner {
-  height: 400px;
-  width: 100%;
-  max-width: 100%;
-  max-height: 50%;
-  min-height: 20%;
-  background-image: url("../images/hmcover.jpg");
-  background-size: cover;
+      height: 400px;
+      width: 100%;
+      max-width: 100%;
+      max-height: 50%;
+      min-height: 20%;
+      background-image: url("../images/hmcover.jpg");
+      background-size: cover;
 }
 
-    /*p {
-    	font-size: 36px;
-    	font-family: courier;
-    }
-
-*/
-    #hintBox {
+#hintBox {
 
       font-family: Arial;
       font-size: 18px;
       color: black;
       background-color: lightblue;
-    }
+}
 
-    #charsUsed {
+#charsUsed {
       font-size: 24px;
       font-weight: bold;
       font-family: courier;
       color: black;
-    }
+}
 
-    #displayStage {
+#displayStage {
       font-size: 36px;
       font-family: courier;
       font-weight: bold;
-    }
+}
 
-/*    #message {
+#alertBox {
       position: absolute;
-      font-size: 24px;
-      font-weight: bold;
-      font-family: courier;
-      top: 430px;
-    }
-
-    #charsUsed {
-      position: absolute;
-      font-size: 24px;
-      font-weight: bold;
-      font-family: courier;
-      top: 400px;
-    }
-
-    #maxAttempts {
-      position: absolute;
-      top: 370px;
-      font-size: 24px;
-      font-weight: bold;
-      font-family: courier;
-      width: 400px;
-    }
-
-    #bodywrap {
-      text-align: center;;
-      width: 150px;
-      font-size: 60px;
-      color: black;
-      font-weight: bold;
-      border: 0px;
-      padding: 0px;
-      margin: 0px;
-      border-left: 75px;
-      border-top: 75px;
-      border-color: brown;
-    }
-*/
+      top: 100px;
+      margin-left: auto;
+      margin-right: auto;
+      z-index: 5;
+}
